# Year-1

./: ._Block A - Business Understanding  ._README.md  README.md
Block A - Business Understanding/: README_BUAS.md  README_BlockA.md
Block A - Business Understanding/Deliverables/: 236578_2023-24 ADS_AI Assessment Rubric Block A Y1.xlsx  236578_Work Log 2023-24A ADS_AI.xlsx  SDG Dashboard FINAL.pbix  Student Template.pbix
Block A - Business Understanding/Exercises/: VladutuDaria_GitHubExercise  VladutuDaria_GitHubExercise.txt
Block A - Business Understanding/Introduction to Programming with Python/: 1. Variables.ipynb  10. Data analysis.ipynb  11. Algorithms.ipynb  2. Conditional execution.ipynb  3. Functions.ipynb  4. Loops.ipynb  5. Strings.ipynb  6. Lists.ipynb  7. Dictionaries.ipynb  8. Tuples.ipynb  9. Files.ipynb  CSV for notebooks exmple.csv
Block B - Tabular Prediction/: README_BUAS.md  README_BlockB.md
Block C - Image Recognition & Classification/: README_BUAS.md  README_BlockC.md
Block D - Vehicle Trajectory Prediction/: ANWB preprocessing.docx  KNMI- preprocessing documentation.odt  README_BUAS.md  README_BlockD.md  Section C - ILO slides.pptx  Task_3_document.docx  Trello - dsai-y1d-18.csv  openmeteobreda.csv
Block D - Vehicle Trajectory Prediction/Deployment/poetry-management/: .coverage  EvidenceOfPoetry.ipynb  OutputUnitTest.ipynb  main_script.py  pyproject.toml  team18env.yml  test_main_script.py
Block D - Vehicle Trajectory Prediction/Deployment/poetry-management/.ipynb_checkpoints/: EvidenceOfPoetry-checkpoint.ipynb
(+206 files in other folders)
